# igxi-convert

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: igxi-tool.hpp
include/igxi/: convert.hpp
src/: igxi-tool.cpp
src/igxi/: convert.cpp
